# CppND-Capstone

./: .clang-format  CMakeLists.txt  README.md  make.sh  run.sh
engine/: README.md  component.hpp  component.hxx  entity.hpp  entity.hxx  logger.hxx  system.hpp  system.hxx  world.hpp  world.hxx
src/: main.cpp
src/engine/: README.md  component.cpp  entity.cpp  system.cpp  world.cpp
src/rogue/: README.md
src/rogue/components/: gridPosition.hxx  mapGrid.hxx  spriteComponent.hxx
src/rogue/entities/: map.hxx  player.hxx
src/rogue/systems/: gridMovement.hxx  mapRenderer.hxx  spriteRender.hxx
